--- a/hatch-match-frontend/src/Styles/navbar.css
+++ b/hatch-match-frontend/src/Styles/navbar.css
@@ -1,12 +1,11 @@
 /* Navbar container */
 .navbar {
-    background-color: aqua;
+    background-image: url('https://freerangeamerican.us/wp-content/uploads/2022/01/Image-from-iOS-1-scaled.jpg');
+    background-size: cover;
+    background-position: center;
     display: flex;
-    justify-content: space-between;
     align-items: center; /* Center items vertically */
-    padding: 30px;
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 100px;
 }
 
 /* Navbar links */
@@ -28,4 +27,9 @@
 .navbar a:hover {
     background-color: #e0e0e0; /* Light gray background on hover */
     color: black;
+}
+
+.navbar a {
+    background-color: orange;
+    color: black
 }
