--- a/src/Styles/FlyPopUp.css
+++ b/src/Styles/FlyPopUp.css
@@ -1,31 +1,53 @@
 .card-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  max-width: 50%;
+  width: 50%;
+  height: 90%;
+  overflow-y: auto;
+}
+
+.card-button {
+  margin-top: 10px;
+}
+
+.fly-image {
+  max-width: 80%;
+  height: auto;
+}
+
+.bug-image {
+  max-width: 40%;
+  height: auto;
+}
+
+.details-container {
+  display: flex;
+  justify-content: space-between; /* Ensure elements are spaced evenly */
+  width: 100%;
+}
+
+.details-left {
+  display: flex;
+  flex-direction: column; /* Stack ul elements vertically */
+}
+
+.details-left ul {
+  margin-bottom: 10px; /* Adjust spacing between ul elements */
+}
+
   
-  .card {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-    max-width: 400px;
-    width: 80%;
-    text-align: center; /* Center the content */
-  }
-  
-  .card-image {
-    width: 100%; /* Make the image fill the container */
-    height: auto; /* Maintain aspect ratio */
-    margin-bottom: 10px; /* Add space below the image */
-  }
-  
-  .card-button {
-    margin-top: 10px; /* Add space above the button */
-  }
