--- a/hatch-match-frontend/src/Styles/navbar.css
+++ b/hatch-match-frontend/src/Styles/navbar.css
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center; /* Center items vertically */
     padding: 100px;
+    justify-content: space-evenly;
 }
 
 /* Navbar links */
