--- a/src/Styles/FlyPopUp.css
+++ b/src/Styles/FlyPopUp.css
@@ -2,52 +2,43 @@
   position: fixed;
   top: 0;
   left: 0;
+  align-items: center;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
+  background-color: rgba(0, 0, 0, 0.8);
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .card {
-  background-color: white;
+  background-color: azure;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  max-width: 50%;
-  width: 50%;
-  height: 90%;
+  max-width: 70%;
+  height: 70%;
   overflow-y: auto;
+}
+
+.details-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.bug-image {
+  max-width: 50%;
 }
 
 .card-button {
   margin-top: 10px;
 }
 
-.fly-image {
-  max-width: 80%;
-  height: auto;
-}
 
-.bug-image {
-  max-width: 40%;
-  height: auto;
-}
 
-.details-container {
-  display: flex;
-  justify-content: space-between; /* Ensure elements are spaced evenly */
-  width: 100%;
-}
 
-.details-left {
-  display: flex;
-  flex-direction: column; /* Stack ul elements vertically */
-}
 
-.details-left ul {
-  margin-bottom: 10px; /* Adjust spacing between ul elements */
-}
+
+
+
+
 
   
