--- a/src/Styles/suggestionForm.css
+++ b/src/Styles/suggestionForm.css
@@ -1,79 +1,58 @@
-.form-container {
-    max-width: 400px;
-    margin: 0 auto;
+.Uploads {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
+.form-container,
+.catch-of-week-container {
+    width: 40%;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: #f9f9f9;
-  }
-  
-  .form-container h2 {
-    text-align: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin-top: 20px;
+}
+
+.form-container h2,
+.catch-of-week-container h2 {
     margin-bottom: 20px;
-  }
-  
-  .form-container label {
-    font-weight: bold;
-  }
-  
-  .form-container input[type="text"],
-  .form-container select,
-  .form-container button,
-  .form-container input[type="file"] {
-    width: 100%;
-    padding: 10px;
+    text-align: center;
+}
+
+form,
+.catch-of-week-container form {
+    display: flex;
+    flex-direction: column;
+}
+
+form label,
+.catch-of-week-container form label {
     margin-bottom: 10px;
-    box-sizing: border-box;
-  }
-  
-  .form-container button {
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .form-container button:hover {
-    background-color: #0056b3;
-  }
-  
-  /* Optional: Styles for popup */
-  
-  .popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    padding: 20px;
+}
+
+form input,
+.catch-of-week-container form input,
+form select,
+.catch-of-week-container form select {
+    margin-bottom: 15px;
+    padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  }
-  
-  .popup h3 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .popup p {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-  
-  .popup button {
-    display: block;
-    margin: 0 auto;
+}
+
+form button,
+.catch-of-week-container form button {
+    padding: 10px 20px;
     background-color: #007bff;
     color: #fff;
     border: none;
-    padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-  }
-  
-  .popup button:hover {
+    transition: background-color 0.3s ease;
+}
+
+form button:hover,
+.catch-of-week-container form button:hover {
     background-color: #0056b3;
-  }
+}
