--- a/src/Styles/flies.css
+++ b/src/Styles/flies.css
@@ -13,17 +13,17 @@ header {
 .fly-grid {
   display: grid;
   grid-template-columns: repeat(3, minmax(250px, 1fr));
-  justify-content: center; /* Center the grid horizontally */
-  align-items: center; /* Center the grid vertically */
-  gap: 20px; /* Adjust the gap between grid items */
-  max-width: 1200px; /* Optional: Set a maximum width for the grid */
-  margin: 20px auto; /* Optional: Center the grid container itself */
-  padding: 20px; /* Optional: Add padding around the grid container */
+  justify-content: center; 
+  align-items: center; 
+  gap: 20px; 
+  max-width: 1200px; 
+  margin: 20px auto; 
+  padding: 20px; 
 }
 
 .fly-card {
-  display: flex; /* Use flexbox */
-  flex-direction: column; /* Stack children vertically */
+  display: flex; 
+  flex-direction: column; 
   align-items: center;
   border: 5px solid #ccc;
   border-radius: 5px;
