--- a/hatch-match-frontend/src/Styles/navbar.css
+++ b/hatch-match-frontend/src/Styles/navbar.css
@@ -1,32 +1,30 @@
-/* Navbar container */
 .navbar {
     background-image: url('https://freerangeamerican.us/wp-content/uploads/2022/01/Image-from-iOS-1-scaled.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
-    align-items: center; /* Center items vertically */
+    align-items: center; 
     padding: 100px;
     justify-content: space-evenly;
 }
 
-/* Navbar links */
 .navbar a {
     color: black;
-    text-decoration: none; /* Remove underline */
-    padding: 10px 15px; /* Add padding for better spacing */
-    border-radius: 5px; /* Add rounded corners */
-    transition: background-color 0.3s; /* Smooth transition for background color */
+    text-decoration: none; 
+    padding: 10px 15px; 
+    border-radius: 5px; 
+    transition: background-color 0.3s; 
 }
 
-/* Active link */
+
 .navbar a.active {
     color: white;
     background-color: black;
 }
 
-/* Hover effect on links */
+
 .navbar a:hover {
-    background-color: #e0e0e0; /* Light gray background on hover */
+    background-color: #e0e0e0; 
     color: black;
 }
 
