--- a/src/Styles/FlyPopUp.css
+++ b/src/Styles/FlyPopUp.css
@@ -13,12 +13,11 @@
 .card {
   display: flex;
   flex-direction: column;
-  
   background-color: azure;
   padding: 20px;
   border-radius: 8px;
   max-width: 70%;
-  height: 70%;
+  height: 80%;
   overflow-y: auto;
 }
 
@@ -33,17 +32,22 @@
   justify-content: center;
 }
 
+.images-and-details {
+  display: flex;
+  flex-direction: row;
+}
+
 .image-container {
   position: relative;
 }
 
 .fly-image-popup {
-  width: 50vw;
+  height: 60vh;
   margin: 10px;
 }
 
 .bug-image {
-  max-width: 45%;
+  max-width: 50%;
   position: absolute;
   top: 90%;
   left: 77%;
@@ -65,6 +69,17 @@
   justify-content: center;
   max-width: 10vw;
   margin-left: 20vw;
+}
+
+.details-container {
+  padding-top: 20vh;
+}
+
+.written-tutorial {
+  max-width: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 
