--- a/src/Styles/header.css
+++ b/src/Styles/header.css
@@ -7,5 +7,10 @@
     background-size: cover;
     background-position: 50% 69%;
     height: 30vh;
+    font-size: 200%;
+}
+
+.header-logo {
+    width: 12vw;
 }
 
