--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    text-align: center;
 }
 
 .header {
@@ -17,9 +16,13 @@
     height: auto;
 }
 
-.main {
+.into-text {
     text-align: center;
-    font-size: 150%;
+    font-size: larger;
+}
+
+.featured-fly-header {
+    text-align: center;
 }
 
 .featured-flies-container {
@@ -30,6 +33,19 @@
 
 .catch-of-week-container {
     margin-bottom: 20px;
+}
+
+.catch-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5vh;
+}
+
+.fly-used {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .fly-used-image {
